packages/project-meta/src/snapshots/confy_project_meta__tests__happy_path_3.snap
---
source: project-meta/src/lib.rs
expression: ok_result
snapshot_kind: text
---
- name: ""
  version: ""
  description: ~
  authors: ~
  license: ~
  keywords: ~
  dependencies:
    "@cliffy/command": "jsr:@cliffy/command@1.0.0-rc.7"
    "@elcoosp-configs/biome": "npm:@elcoosp-configs/biome@0"
    "@mdx-js/mdx": "npm:@mdx-js/mdx@^3.1.0"
    "@std/assert": "jsr:@std/assert@1.0.8"
    "@std/fs": "jsr:@std/fs@1.0.6"
    "@std/jsonc": "jsr:@std/jsonc@1.0.1"
    "@std/path": "jsr:@std/path@^1.0.8"
    "@std/testing": "jsr:@std/testing@^1.0.5"
    "@std/toml": "jsr:@std/toml@1.0.2"
    "@wok/case": "jsr:@wok/case@^1.0.1"
    react: "npm:react@^18.3.1"
    react-dom: "npm:react-dom@^18.3.1"
  scripts: ~
